force-app/main/default/objects/Lead/fields/ACE_Composites_Unit_2_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>ACE_Composites_Unit_2_SUTAD__c</fullName>
    <description>ACE Composites Unit 2 Signup Time &amp; Date</description>
    <label>ACE Composites Unit 2 SUTAD</label>
    <type>Date</type>
</CustomField>