force-app/main/default/objects/Lead/fields/ACE_Composites_Unit_3_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>ACE_Composites_Unit_3_SUTAD__c</fullName>
    <label>ACE Composites Unit 3 SUTAD</label>
    <type>DateTime</type>
</CustomField>