force-app/main/default/objects/Lead/fields/ACE_Intro_to_Composites_Signup_Time__c.field-meta.xml
<CustomField>
    <fullName>ACE_Intro_to_Composites_Signup_Time__c</fullName>
    <description>Introduction to Composites &amp; Composites Manufacturing signup time</description>
    <label>ACE Intro to Composites Signup Time</label>
    <type>Date</type>
</CustomField>