force-app/main/default/objects/Lead/fields/ACE_Metal_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>ACE_Metal_Signup_Date__c</fullName>
    <label>ACE Metal Signup Date</label>
    <type>Date</type>
</CustomField>