force-app/main/default/objects/Lead/fields/ACE_Metrology_Respose_Date__c.field-meta.xml
<CustomField>
    <fullName>ACE_Metrology_Respose_Date__c</fullName>
    <description>Linked with Pardot Feild to sort date of form completions.</description>
    <label>ACE Metrology Respose Date</label>
    <type>Date</type>
</CustomField>