force-app/main/default/objects/Lead/fields/ACE_Smart_MFG_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>ACE_Smart_MFG_SUTAD__c</fullName>
    <label>ACE Smart MFG SUTAD</label>
    <type>DateTime</type>
</CustomField>