force-app/main/default/objects/Lead/fields/Additional_Contact_Organization__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Organization__c</fullName>
    <label>Additional Contact Organization</label>
    <length>150</length>
    <type>Text</type>
</CustomField>