force-app/main/default/objects/Lead/fields/Additional_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Phone__c</fullName>
    <label>Additional Contact Phone</label>
    <type>Phone</type>
</CustomField>