force-app/main/default/objects/Lead/fields/Additional_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Role__c</fullName>
    <label>Additional Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role</valueSetName>
    </valueSet>
</CustomField>