force-app/main/default/objects/Lead/fields/Additional_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_State__c</fullName>
    <label>Additional Contact State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>