force-app/main/default/objects/Lead/fields/Additional_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Zip__c</fullName>
    <label>Additional Contact Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>