force-app/main/default/objects/Lead/fields/Agree_to__c.field-meta.xml
<CustomField>
    <fullName>Agree_to__c</fullName>
    <label>Agree to US Manufacturing plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>