force-app/main/default/objects/Lead/fields/Agree_to_US__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_US__c</fullName>
    <inlineHelpText>Agreed to &quot;I understand and agree to comply with the Performance of Work in the U.S. requirement.&quot;</inlineHelpText>
    <label>Agree to US Peformance of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>