force-app/main/default/objects/Lead/fields/Are_Special_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Are_Special_Accommodations__c</fullName>
    <label>Are special accommodations required</label>
    <type>TextArea</type>
</CustomField>