force-app/main/default/objects/Lead/fields/Associated_ACE_Program__c.field-meta.xml
<CustomField>
    <fullName>Associated_ACE_Program__c</fullName>
    <label>Associated ACE Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Associated_ACE_Program</valueSetName>
    </valueSet>
</CustomField>