force-app/main/default/objects/Lead/fields/Associated_METAL_Program__c.field-meta.xml
<CustomField>
    <fullName>Associated_METAL_Program__c</fullName>
    <label>Associated METAL Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California State Polytechnic University, Pomona</fullName>
            </value>
            <value>
                <fullName>Cleveland State University</fullName>
            </value>
            <value>
                <fullName>Georgia Southern University</fullName>
            </value>
            <value>
                <fullName>Michigan Tech University</fullName>
            </value>
            <value>
                <fullName>None of these are close to me</fullName>
                <default>true</default>
                <label>None of these are close to me</label>
            </value>
            <value>
                <fullName>North Carolina State University</fullName>
            </value>
            <value>
                <fullName>Ohio State University</fullName>
            </value>
            <value>
                <fullName>Penn State University - Erie (Behrend)</fullName>
            </value>
            <value>
                <fullName>Penn State University - State College</fullName>
            </value>
            <value>
                <fullName>Purdue University</fullName>
            </value>
            <value>
                <fullName>Tennessee Tech University</fullName>
            </value>
            <value>
                <fullName>Texas State University</fullName>
            </value>
            <value>
                <fullName>University of Alabama Birmingham</fullName>
            </value>
            <value>
                <fullName>University of Northern Iowa</fullName>
            </value>
            <value>
                <fullName>University of Tennessee</fullName>
            </value>
            <value>
                <fullName>University of Wisconsin - Madison</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>