force-app/main/default/objects/Lead/fields/Bootcamp_Dates__c.field-meta.xml
<CustomField>
    <fullName>Bootcamp_Dates__c</fullName>
    <description>Used in pardot list &quot;Machine Tool Bootcamp Signup Forms&quot;</description>
    <label>Bootcamp Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>