force-app/main/default/objects/Lead/fields/Branch_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Branch_of_Service__c</fullName>
    <label>Branch of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch_of_Service</valueSetName>
    </valueSet>
</CustomField>