force-app/main/default/objects/Lead/fields/Canvas_ID__c.field-meta.xml
<CustomField>
    <fullName>Canvas_ID__c</fullName>
    <label>Canvas ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>