force-app/main/default/objects/Lead/fields/Closest_or_Preferred_ACE_Location__c.field-meta.xml
<CustomField>
    <fullName>Closest_or_Preferred_ACE_Location__c</fullName>
    <label>Closest or Preferred ACE Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closest_or_Preferred_ACE_Location</valueSetName>
    </valueSet>
</CustomField>