force-app/main/default/objects/Lead/fields/CMMC_Introduction_to_Cybersecurity__c.field-meta.xml
<CustomField>
    <fullName>CMMC_Introduction_to_Cybersecurity__c</fullName>
    <label>CMMC, Introduction to Cybersecurity</label>
    <type>DateTime</type>
</CustomField>