force-app/main/default/objects/Lead/fields/CMMC_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>CMMC_Response_Date__c</fullName>
    <description>Links to Pardot CMMC Signup Form</description>
    <label>CMMC Response Date</label>
    <type>Date</type>
</CustomField>