force-app/main/default/objects/Lead/fields/Composites_and_Finishing__c.field-meta.xml
<CustomField>
    <fullName>Composites_and_Finishing__c</fullName>
    <description>Updates with API for enrollments</description>
    <label>Composites and Finishing</label>
    <type>DateTime</type>
</CustomField>