force-app/main/default/objects/Lead/fields/Composites_Online_Signup_Form_Time__c.field-meta.xml
<CustomField>
    <fullName>Composites_Online_Signup_Form_Time__c</fullName>
    <label>Composites Online Signup Form Time</label>
    <type>Date</type>
</CustomField>