force-app/main/default/objects/Lead/fields/Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Citizenship__c</fullName>
    <label>Country of Citizenship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>