force-app/main/default/objects/Lead/fields/Current_Educational_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Educational_Status__c</fullName>
    <label>Current Educational Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Educational_Status</valueSetName>
    </valueSet>
</CustomField>