force-app/main/default/objects/Lead/fields/Cybersecurity_2_0_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_2_0_Response_Date__c</fullName>
    <description>Links to CyberSec 2.0 Response form</description>
    <label>Cybersecurity 2.0 Response Date</label>
    <type>Date</type>
</CustomField>