force-app/main/default/objects/Lead/fields/Did_this_new_change_include_a_wage_incre__c.field-meta.xml
<CustomField>
    <fullName>Did_this_new_change_include_a_wage_incre__c</fullName>
    <label>Change include a wage increase?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>