force-app/main/default/objects/Lead/fields/Did_you_transition_companies__c.field-meta.xml
<CustomField>
    <fullName>Did_you_transition_companies__c</fullName>
    <label>Did you transition companies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>