force-app/main/default/objects/Lead/fields/Do_you_have_health_insurance__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_health_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have health insurance?</label>
    <type>Checkbox</type>
</CustomField>