force-app/main/default/objects/Lead/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate Student</fullName>
            </value>
            <value>
                <fullName>Graduate Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>