force-app/main/default/objects/Lead/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <type>TextArea</type>
</CustomField>