force-app/main/default/objects/Lead/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Enter the name of the last event this person attended.</description>
    <inlineHelpText>Example: &quot;IMTS&quot;</inlineHelpText>
    <label>Event</label>
    <type>TextArea</type>
</CustomField>