force-app/main/default/objects/Lead/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compressed Gas Storage</fullName>
            </value>
            <value>
                <fullName>Design Modeling and Simulation</fullName>
            </value>
            <value>
                <fullName>High Rate Aerostructures</fullName>
            </value>
            <value>
                <fullName>Infrastructure &amp; Construction</fullName>
            </value>
            <value>
                <fullName>Materials and Processes</fullName>
            </value>
            <value>
                <fullName>Recycling/Circular Economy</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Wind Turbines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>