force-app/main/default/objects/Lead/fields/Fusion_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>Fusion_SUTAD__c</fullName>
    <label>Fusion SUTAD</label>
    <type>DateTime</type>
</CustomField>