force-app/main/default/objects/Lead/fields/Have_you_received_a_machining_related_jo__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_a_machining_related_jo__c</fullName>
    <label>Have you received a machining related jo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>