force-app/main/default/objects/Lead/fields/Highest_level_of_education_attained__c.field-meta.xml
<CustomField>
    <fullName>Highest_level_of_education_attained__c</fullName>
    <label>Highest level of education attained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Highest_level_of_education_attained</valueSetName>
    </valueSet>
</CustomField>