force-app/main/default/objects/Lead/fields/How_did_you_hear_about_METAL__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_METAL__c</fullName>
    <label>How did you hear about METAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Make it in America&quot; Campaign</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Instructor/Professor</fullName>
            </value>
            <value>
                <fullName>LaborUp</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>NextOp</fullName>
            </value>
            <value>
                <fullName>X (Twitter)</fullName>
            </value>
            <value>
                <fullName>ACE or METAL Activity/Event</fullName>
            </value>
            <value>
                <fullName>IACMI Partner Facility</fullName>
            </value>
            <value>
                <fullName>IACMI Staff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MEP (Manufacturing Extension Partnership)</fullName>
                <isActive>false</isActive>
                <label>MEP (Manufacturing Extension Partnership)</label>
            </value>
            <value>
                <fullName>METAL Activity/Event</fullName>
                <isActive>false</isActive>
                <label>METAL Activity/Event</label>
            </value>
            <value>
                <fullName>School/Activity Event</fullName>
                <isActive>false</isActive>
                <label>School/Activity Event</label>
            </value>
            <value>
                <fullName>Television</fullName>
                <isActive>false</isActive>
                <label>Television</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>