force-app/main/default/objects/Lead/fields/How_did_you_hear_IACMI_Other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_IACMI_Other__c</fullName>
    <label>How did you hear IACMI? - Other</label>
    <type>TextArea</type>
</CustomField>