force-app/main/default/objects/Lead/fields/Intersted_in_Partnering_on_Workforce__c.field-meta.xml
<CustomField>
    <fullName>Intersted_in_Partnering_on_Workforce__c</fullName>
    <label>Intersted in Partnering on Workforce?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>