force-app/main/default/objects/Lead/fields/Is_this_for_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Is_this_for_onboarding__c</fullName>
    <label>Is this for onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>