force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>