force-app/main/default/objects/Lead/fields/lcon__Converted_Via_MLC__c.field-meta.xml
<CustomField>
    <fullName>lcon__Converted_Via_MLC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leads converted via MLC</description>
    <label>Converted Via MLC</label>
    <type>Checkbox</type>
</CustomField>