force-app/main/default/objects/Lead/fields/Location_of_Bootcamp_Attending__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Bootcamp_Attending__c</fullName>
    <description>Used in Pardot Bootcamp Signup Forms</description>
    <label>Location of Bootcamp Attending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closest_or_Preferred_ACE_Location</valueSetName>
    </valueSet>
</CustomField>