force-app/main/default/objects/Lead/fields/Machine_Tool_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Machine_Tool_Response_Date__c</fullName>
    <description>Linked to Pardot field for the sorting of form completions</description>
    <label>Machine Tool Response Date</label>
    <type>Date</type>
</CustomField>