force-app/main/default/objects/Lead/fields/Machine_Training__c.field-meta.xml
<CustomField>
    <fullName>Machine_Training__c</fullName>
    <label>Machine Training</label>
    <type>DateTime</type>
</CustomField>