force-app/main/default/objects/Lead/fields/Mastercam_CNC_Machine__c.field-meta.xml
<CustomField>
    <fullName>Mastercam_CNC_Machine__c</fullName>
    <label>Mastercam CNC Machine</label>
    <type>DateTime</type>
</CustomField>