force-app/main/default/objects/Lead/fields/Mastercam_response_date__c.field-meta.xml
<CustomField>
    <fullName>Mastercam_response_date__c</fullName>
    <description>For sorting out mastercam registrations</description>
    <label>Mastercam response date</label>
    <type>Date</type>
</CustomField>