force-app/main/default/objects/Lead/fields/Membership_Form_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Form_Completed_Date__c</fullName>
    <inlineHelpText>This is the date the membership form was submitted on the website.</inlineHelpText>
    <label>Membership Form Completed Date</label>
    <type>Date</type>
</CustomField>