force-app/main/default/objects/Lead/fields/METAL_Digital_Tech_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>METAL_Digital_Tech_SUTAD__c</fullName>
    <label>METAL | Digital Tech SUTAD</label>
    <type>DateTime</type>
</CustomField>