force-app/main/default/objects/Lead/fields/METAL_Forging_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>METAL_Forging_SUTAD__c</fullName>
    <label>METAL | Forging SUTAD</label>
    <type>DateTime</type>
</CustomField>