force-app/main/default/objects/Lead/fields/METAL_Magnesium_Casting_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>METAL_Magnesium_Casting_SUTAD__c</fullName>
    <label>METAL | Magnesium Casting SUTAD</label>
    <type>DateTime</type>
</CustomField>