force-app/main/default/objects/Lead/fields/METAL_Sand_Science_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>METAL_Sand_Science_SUTAD__c</fullName>
    <label>METAL Sand Science SUTAD</label>
    <type>DateTime</type>
</CustomField>