force-app/main/default/objects/Lead/fields/Metal_SUTAD__c.field-meta.xml
<CustomField>
    <fullName>Metal_SUTAD__c</fullName>
    <description>This the data of signup for ACE Metal.  It will be updated automatically by the Canvas Integration API.</description>
    <label>Metal SUTAD</label>
    <type>DateTime</type>
</CustomField>