force-app/main/default/objects/Lead/fields/Metrology__c.field-meta.xml
<CustomField>
    <fullName>Metrology__c</fullName>
    <label>Metrology</label>
    <type>DateTime</type>
</CustomField>