force-app/main/default/objects/Lead/fields/Metrology_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Metrology_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metrology Enrollment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Canvas_Enrollment__c.Canvas_ID__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Canvas_Enrollment__c</referenceTo>
    <relationshipLabel>Metrology Enrollment</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>