force-app/main/default/objects/Lead/fields/NAC_Role__c.field-meta.xml
<CustomField>
    <fullName>NAC_Role__c</fullName>
    <label>NAC Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NAC_Role</valueSetName>
    </valueSet>
</CustomField>