force-app/main/default/objects/Lead/fields/Name_of_college_attended__c.field-meta.xml
<CustomField>
    <fullName>Name_of_college_attended__c</fullName>
    <description>Name of college attended</description>
    <externalId>true</externalId>
    <label>Name of college attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>