force-app/main/default/objects/Lead/fields/Name_of_high_school_attended__c.field-meta.xml
<CustomField>
    <fullName>Name_of_high_school_attended__c</fullName>
    <description>Name of high school attended</description>
    <label>Name of high school attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>