force-app/main/default/objects/Lead/fields/Organization_Size__c.field-meta.xml
<CustomField>
    <fullName>Organization_Size__c</fullName>
    <label>Organization Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization_Size</valueSetName>
    </valueSet>
</CustomField>