force-app/main/default/objects/Lead/fields/Pardot_Counter__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Counter__c</fullName>
    <label>Pardot Counter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>