force-app/main/default/objects/Lead/fields/Pardot_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Last_Activity__c</fullName>
    <label>Pardot Last Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>