force-app/main/default/objects/Lead/fields/Past_Casting_Forging_Experience__c.field-meta.xml
<CustomField>
    <fullName>Past_Casting_Forging_Experience__c</fullName>
    <label>Past Casting &amp; Forging Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>