force-app/main/default/objects/Lead/fields/Past_CNC_Machine_Tool_experience__c.field-meta.xml
<CustomField>
    <fullName>Past_CNC_Machine_Tool_experience__c</fullName>
    <label>Past CNC Machine Tool Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>