force-app/main/default/objects/Lead/fields/Program_Role__c.field-meta.xml
<CustomField>
    <fullName>Program_Role__c</fullName>
    <label>Program Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Role</valueSetName>
    </valueSet>
</CustomField>