force-app/main/default/objects/Lead/fields/School_or_company_city__c.field-meta.xml
<CustomField>
    <fullName>School_or_company_city__c</fullName>
    <label>School or company city</label>
    <length>50</length>
    <type>Text</type>
</CustomField>